# pythonball

./: .gitignore  fools.json  main.py  pyproject.toml  servers.json  users-backup.json
SECRET/: yt_token
commands/: board.py  coins.py  misc.py
data/: servers.json  users.json
modules/: commands.py  data.py  helpers.py
