[tool.poetry]
name = "pythonball"
version = "0.1.0"
description = ""
authors = ["EpicRaisin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
discord-py = "^2.3.1"
pillow = "^10.0.0"
requests = "^2.31.0"
pytube = "^15.0.0"
moviepy = "^1.0.3"
better-profanity = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
